fix: button alignment :bug:

--- a/src/components/header.module.scss
+++ b/src/components/header.module.scss
@@ -116,7 +116,7 @@ p.hp-section-p {
   min-width: 9rem;
   background: $white;
   border: 1px solid $black;
-  margin: 0 1rem;
+  margin-right: 1rem;
   box-shadow: none;
 }
 .header-button-light {
